--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@
           <a href="" target="_blank"></a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 32?</summary>
+        <li>
+          <a href="https://docs.google.com/forms/u/1/d/1VTztXOS31tM2NQdur44dJKN_ufKLtfkPj4eNMHvavVY/edit?usp=forms_home&ths=true" target="_blank">MIDPOINT REVIEW</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
