--- a/index.html
+++ b/index.html
@@ -350,6 +350,18 @@
           <a href="https://docs.google.com/forms/u/1/d/1VTztXOS31tM2NQdur44dJKN_ufKLtfkPj4eNMHvavVY/edit?usp=forms_home&ths=true" target="_blank">MIDPOINT REVIEW</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 34 </summary>
+        <li>
+          <a href="https://medium.com/the-renaissance-developer/ruby-101-object-oriented-programming-part-1-af734f87f481" target="_blank">
+          Review of Object Oriented Ruby
+          </a>
+        </li>
+        <li>
+          <a href="https://medium.com/the-renaissance-developer/ruby-101-data-structures-7705d82ec1" target="_blank">Review of Arrays and Hashes</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
