--- a/index.html
+++ b/index.html
@@ -361,7 +361,15 @@
         <li>
           <a href="https://medium.com/the-renaissance-developer/ruby-101-data-structures-7705d82ec1" target="_blank">Review of Arrays and Hashes</a>
         </li>
-
+        <li>
+          <a href="https://learn.co/lessons/sinatra-view-and-controller-readme-walkthrough" target="_blank"></a>
+        </li>
+        <li>
+          <a href="https://learn.co/lessons/sinatra-routes-readme" target="_blank">Sinatra Routing</a>
+        </li>
+        <li>
+          <a href="https://learn.co/lessons/sinatra-yield-readme" target="_blank">Sinatra Yield</a>
+        </li>
       </details>
     </main>
   </div>
