--- a/index.html
+++ b/index.html
@@ -371,6 +371,13 @@
           <a href="https://learn.co/lessons/sinatra-yield-readme" target="_blank">Sinatra Yield</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 38</summary>
+        <li>
+          <a href="https://defman.me/blog/sinatra-app/">Sinatra + ActiveRecord</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
