--- a/index.html
+++ b/index.html
@@ -378,6 +378,13 @@
           <a href="https://defman.me/blog/sinatra-app/">Sinatra + ActiveRecord</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 39</summary>
+        <li>
+          <a href="https://docs.google.com/document/d/1OjZwXPD5FjajS_hV5zZQFOgtSX7kp5Is5KZQX9p78Hk/edit?usp=sharing" target="_blank">Project 5</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
