--- a/index.html
+++ b/index.html
@@ -384,6 +384,18 @@
         <li>
           <a href="https://docs.google.com/document/d/1OjZwXPD5FjajS_hV5zZQFOgtSX7kp5Is5KZQX9p78Hk/edit?usp=sharing" target="_blank">Project 5</a>
         </li>
+        <li>
+          <a href="https://www.useloom.com/share/837815298aac44de8f0cc89a4c62934d" target="_blank"> Workshop Recording </a>
+        </li>
+        <li>
+          <a href="https://www.useloom.com/share/233612a29d52495ea143a7646a3848b5" target="_blank"> Linking Sinatra to ActiveRecord</a>
+        </li>
+        <li>
+          <a href="https://www.useloom.com/share/3fcba354bfe7470fb9594077b1281821" target="_blank">Logging in and logging out</a>
+        </li>
+        <li>
+          <a href="sinatra-activerecord-bp.zip" target="_blank"> Download Sinatra Boilerplate</a>
+        </li>
       </details>
     </main>
   </div>
