--- a/index.html
+++ b/index.html
@@ -397,6 +397,13 @@
           <a href="sinatra-activerecord-bp.zip" target="_blank"> Download Sinatra Boilerplate</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 40</summary>
+        <li>
+          <a href="https://medium.com/@fizal.sarif/working-on-a-sinatra-project-with-gitpod-d24fbae67e9e" target="_blank">How to use Gitpod</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
