--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
       <br>
       <details>
         <summary>Day 40</summary>
+        <p>I'm so sorry, I accidentally deleted the video. This link takes you to some instructions to use Gitpod. Please commit and push to github often when using it.</p>
         <li>
           <a href="https://medium.com/@fizal.sarif/working-on-a-sinatra-project-with-gitpod-d24fbae67e9e" target="_blank">How to use Gitpod</a>
         </li>
