added summary up to mid point reveiew and added holiday pic

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+ 
   <header>
     <h1 id="title">Class Links</h1>
   </header>
   <div class="container">
     <main>
+        <div class="temp_img">
+            <img src="http://www.lovethispic.com/uploaded_images/224627-Merry-Christmas-And-Happy-New-Year.gif" alt="Wishing Merry Christmas" >
+          </div>
+          <br>
       <details>
         <summary>
           <h2>Week 1 - 3</h2>
@@ -215,6 +220,11 @@
           </details>
       </details>
       <br>
+    <details>
+      <summary>
+        <h2>Week 4 - 6</h2>
+        <p>Keywords: Axios, Redbull API, Bootstrap, Github Pages, Intro to Ruby(Syntax, Functions, OOP, Hashes), Gem Installs, Pig Latin, Bubble Sort, Modal Box(CSS), Mid Reflection</p>
+      </summary>
       <details>
         <summary>Day 17</summary>
         <ul>
@@ -350,6 +360,7 @@
           <a href="https://docs.google.com/forms/u/1/d/1VTztXOS31tM2NQdur44dJKN_ufKLtfkPj4eNMHvavVY/edit?usp=forms_home&ths=true" target="_blank">MIDPOINT REVIEW</a>
         </li>
       </details>
+    </details>
       <br>
       <details>
         <summary>Day 34 </summary>
