add sinatra guide

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
- 
+
   <header>
     <h1 id="title">Class Links</h1>
   </header>
@@ -426,6 +426,7 @@
     <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
     <a href="https://github.com/fizal619/yearup" target="_blank">This Portal's Github</a> |
     <a href="https://github.com/fizal619/yearup-class-2018" target="_blank">CLASS GITHUB</a>
+    <a href="https://docs.google.com/document/d/1erF8pMn-83nrCjd9vnyREdx1LV7i8BSGCiJr_7QQ0Wg/edit?usp=sharing" target="_blank"> How to deploy your sinatra app! </a>
     <br><br>
 
   </div>
