--- a/index.html
+++ b/index.html
@@ -416,6 +416,17 @@
           <a href="https://medium.com/@fizal.sarif/working-on-a-sinatra-project-with-gitpod-d24fbae67e9e" target="_blank">How to use Gitpod</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day Something ?? Intro to Rails</summary>
+        <p>PLEASE DO NOT ADD ANY INAPPROPRIATE DATA TO THESE PROJECTS. EMPLOYERS MAY BE LOOKING AT THEIR PROJECTS.</p>
+        <li>
+          <a href="https://pacific-savannah-17268.herokuapp.com/">Railsdance Film Academy</a>
+        </li>
+        <li>
+          <a href="https://frozen-scrubland-50168.herokuapp.com/admins/sign_in">NYCBA</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
@@ -425,7 +436,7 @@
     <a href="https://css-tricks.com" target="_blank">CSS Tricks</a> |
     <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
     <a href="https://github.com/fizal619/yearup" target="_blank">This Portal's Github</a> |
-    <a href="https://github.com/fizal619/yearup-class-2018" target="_blank">CLASS GITHUB</a>
+    <a href="https://github.com/fizal619/yearup-class-2018" target="_blank">CLASS GITHUB</a> |
     <a href="https://docs.google.com/document/d/1erF8pMn-83nrCjd9vnyREdx1LV7i8BSGCiJr_7QQ0Wg/edit?usp=sharing" target="_blank"> How to deploy your sinatra app! </a>
     <br><br>
 
