add day 45 links

--- a/index.html
+++ b/index.html
@@ -423,6 +423,19 @@
           <a href="https://frozen-scrubland-50168.herokuapp.com/admins/sign_in">NYCBA</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 45 - Ruby on Rails Models</summary>
+        <li>
+          <a href="https://www.useloom.com/share/3b70c1be8fa84406a63b15273314f284" target="_blank">Rails Models Recording Pt 1</a>
+        </li>
+        <li>
+          <a href="https://www.useloom.com/share/dd26610f377f4e17bc641885f6d1f141" target="_blank">Rails Models Recording Pt 2</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/1ZkwvPMiq4Q" target="_blank">BONUS: Advanced Rails Model Tricks</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
