--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
         <li>
           <a href="https://youtu.be/1ZkwvPMiq4Q" target="_blank">BONUS: Advanced Rails Model Tricks</a>
         </li>
+        <li>
+          <a href="https://github.com/fizal619/chirpr" target="_blank">Code from Class: Chirpr</a>
+        </li>
       </details>
     </main>
   </div>
