--- a/index.html
+++ b/index.html
@@ -439,6 +439,16 @@
           <a href="https://github.com/fizal619/chirpr" target="_blank">Code from Class: Chirpr</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 46</summary>
+        <li>
+          <a href="https://www.useloom.com/share/d73ca152fe7c4470a894979c3a2e4f2b" target="_blank">The Asset Pipeline — Ruby on Rails Guides</a>
+        </li>
+        <li>
+          <a href="https://www.useloom.com/share/a5b5d9f042d64a24957e319f0bbae313" target="_blank"> Action View Form Helpers — Ruby on Rails Guides</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
