add last lecture

--- a/index.html
+++ b/index.html
@@ -449,6 +449,15 @@
           <a href="https://www.useloom.com/share/a5b5d9f042d64a24957e319f0bbae313" target="_blank"> Action View Form Helpers — Ruby on Rails Guides</a>
         </li>
       </details>
+      <details>
+        <summary>Day 48</summary>
+        <li>
+          <a href="https://www.useloom.com/share/f9980f620c964226b21d0fb80ed892bf" target="_blank">The Clearance Gem (Lecture Recording)</a>
+        </li>
+        <li>
+          <a href="https://www.useloom.com/share/36845abfced341a0a0a9482d83d260a0" target="_blank"> Many to Many Relationships (Lecture Recording)</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
